--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.compContainer {
+  border: 3px solid orangered;
+  padding: 20px;
+  margin: 20px;
+}
+
+.comp {
+  border: 2px dashed blue;
+  padding: 20px;
+  margin: 20px;
+}
